--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,83 @@ code {
     monospace;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+ }
+
+.App{
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header{
+  margin-bottom: 30px;
+  padding: 3px;
+  background-color: rgb(0, 97, 16);
+  color: darkgoldenrod;
+  align-self:stretch;
+}
+
+.article{
+
+  border: solid black 1px;
+  margin: 10px 20px;
+  border-radius: 4px;
+  max-width: 850px;
+  background-color: rgb(23, 27, 27);
+  color: rgb(199, 194, 194);
+  display: grid;
+  grid-template-areas: "votes info info"
+  "votes title title"
+  "votes body body";
+}
+
+:hover.article{
+  border: solid grey 1px;
+}
+
+.title{
+  grid-area: title;
+  padding-bottom: 30px;
+  justify-self: left;
+  
+}
+
+.votes{
+  grid-area: votes;
+  background-color: #121313;
+   width: 40px;
+}
+
+.article-info{
+  grid-area: info;
+  display: flex;
+  justify-content: space-evenly;
+  justify-items: center;
+  padding-bottom: 30px;
+  padding-top: 10px;
+}
+
+.article-body{
+  grid-area: body;
+  padding: 20px;
+}
+
+.topic{
+  font-weight: bold;
+  font-size: 15px;
+  align-self: flex-start;
+}
+
+.article-info{
+  font-size: 12px;
+}
+
+h4{
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+}
