--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@ code {
   align-self:stretch;
 }
 
+.loading{
+  background-color: red;
+}
+
 .article{
 
   border: solid black 1px;
@@ -49,6 +53,15 @@ code {
 
 :hover.article{
   border: solid grey 1px;
+}
+
+ a{
+  text-decoration: none;
+  color: inherit
+}
+
+:hover.article a{
+  text-decoration:underline;
 }
 
 .title{
